--- a/public_html/html&css/exercise2/pozivnoy schvvarz/style.css
+++ b/public_html/html&css/exercise2/pozivnoy schvvarz/style.css
@@ -1,11 +1,11 @@
 header{
     min-height: 100px;
-    background-image: url('http://kletkivip.ru/img/main-header__bg.jpg');
+    background-image: url('https://pp.vk.me/c637627/v637627935/20703/ej4qE-oTwxk.jpg');
     position: fixed;
     z-index: 9999;
     width: 100%;
     background-repeat: no-repeat;
-    background-position: 50% 100%;
+    background-position: 50% 30%;
 }
 header .logo span{
     font-size: 50px;
@@ -14,8 +14,15 @@ header .logo span{
 header .logo{
     float: left;
     margin: 18px 0;
+    font-family: Courier new; 
+    color: black;
+    /*<!--- почему не меняется*/ 
+    /*font-size: 30px -->*/
 }
 header nav{
+    float: right;
+}
+header nav {
     float: right;
 }
 header nav ul{
@@ -56,4 +63,10 @@ header nav ul li{
     margin: 10px auto;
     font-size: 14px;
     font-weight: 600;
+}
+.lol {
+    color: black;
+}
+.lol2 {
+    color: black;
 }
